namespace EcommerceApp.Api.Models;
public interface IAddressInfo
{
    public string Street { get; set; }
    public string Address { get; set; }
    public string City { get; set; }
    public string PostalCode { get; set; }
    public string PhoneNumber { get; set; }
} 